--- a/index.html
+++ b/index.html
@@ -9,24 +9,22 @@
     <title>htmlcss-struttura</title>
   </head>
 
-  <!--pink header-->
-
-  <header></header>
-
-  <main>
-
-      <!--yellow section-->
-
-      <section></section>
-
-      <!--light blue section-->
-
-      <section></section>
-      
-  </main>
-
-  <!--violett footer-->
-
-  <footer></footer>
-
   <body>
+    
+    <!--pink header-->
+    <header></header>
+
+    <main>
+        <section id="top"></section>
+        <section class="clearfix">
+            <div id="orizzontal"></div>
+            <aside id="first"></aside>
+            <div id="central"></div>
+            <aside id="second"></aside>
+        </section>
+    </main>
+
+    <footer></footer>
++  </body>
++</html>
+
