--- a/index.html
+++ b/index.html
@@ -15,16 +15,19 @@
     <header></header>
 
     <main>
+        <!--section yellow-->
         <section id="top"></section>
         <section class="clearfix">
+            <!--section orizzontal lightblue-->
             <div id="orizzontal"></div>
+            <!--section three parts-->
             <aside id="first"></aside>
             <div id="central"></div>
             <aside id="second"></aside>
         </section>
     </main>
-
+    <!--footer-->
     <footer></footer>
-+  </body>
-+</html>
++ </body>
+</html>
 
